--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,5 @@
 name = bg_music
-description = Ambient background music system for Luanti servers
+description = Ambient background music system for Luanti servers. Define spherical zones where music automatically plays when players enter, with customizable radius, volume, and song filtering. Features include random song queues, regex filtering, and persistent storage of music locations.
 author = Pivert <fun@pivert.org>
 license = GPL-3.0-or-later
 depends = 
