--- a/mod.conf
+++ b/mod.conf
@@ -1,7 +1,8 @@
 name = bg_music
-description = Ambient background music system for Luanti servers. Define spherical zones where music automatically plays when players enter, with customizable radius, volume, and song filtering. Features include random song queues, regex filtering, and persistent storage of music locations.
+description = Ambient background music system for Luanti servers. Define spherical zones where music automatically plays when players enter, with customizable radius, volume, and song filtering. Features include fixed random playlists, stereo support, and persistent storage of music locations.
 author = Pivert <fun@pivert.org>
+release = 1.1.0
 license = GPL-3.0-or-later
 depends = 
-optional_depends = homedecor
+optional_depends = 
 min_minetest_version = 5.0.0
